tests/bad/value_enums/bad_var_init.oc
/// fail: Cannot use Enum `Foo` as an expression

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Foo
}